Bug 264598 - Invitation emails have encoding problems (e.g. with umlauts)
Summary: Invitation emails have encoding problems (e.g. with umlauts)
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: HI major
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-28 10:04 UTC by Bernhard E. Reiter
Modified: 2011-02-22 14:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2011-01-28 10:04:22 UTC
windows-ce/Kontact-Mobile/testing/2011-01-25-18-46/

Invite somebody with an non-ascii char in the full name, e.g. Tobias König.
Now the ics has the wrong encoding, it contains an non-ascii utf-8 character,
but does not indicate a charset or an encoding. It probably should be 
charset utf-8 and encoding quoted-printable.

(In the first test we had the wrong invitation setting which sends it as attachment and not in the body, which would be best. We'll do a test sending this a body as well to see if the encoding is also wrong in this case.)
Comment 1 Tobias Koenig 2011-01-31 12:48:54 UTC
Git commit 79a8ab94d747a2c5432b01cd2168a1b5b733fdde by Tobias Koenig.
Pushed by tokoe into branch 'master'.

Fix encoding for initial invitation mails

During the port from mimelib to kmime the explicit setting of
the charset and transfer-encoding has been lost.

BUG: 264598

M  +10   -2    calendarsupport/mailclient.cpp     

http://commits.kde.org/ee6cc38b/79a8ab94d747a2c5432b01cd2168a1b5b733fdde
Comment 2 Tobias Koenig 2011-01-31 12:49:35 UTC
Bernhard, can you retest this, please?
Comment 3 Ludwig Reiter 2011-02-04 12:46:57 UTC
version 2011-02-03 16:36

Test:
1. A sends an invitation to B using a name with umlauts.
2. B looks at the mail.
But the attendee list of A's invitation doesn't contain B's entry.
So there seems to be a problem.
Comment 4 Tobias Koenig 2011-02-07 09:38:32 UTC
Hej Ludwig,

if A creates the appointment, is A listed as attendee in the event editor as well?
Is 'B' a WinCE device or e3.5 desktop installation?

Ciao,
Tobias
Comment 5 Bernhard E. Reiter 2011-02-11 16:15:16 UTC
We still have encoding problems, the umlaut is now quoted-printable
encoded, but this also included the CRs of each line.

Example lines of windows-ce/Kontact-Mobile/testing/2011-02-10-21-10:
ATTENDEE;CN=3D"Bj=C3=B6rn Ricks";RSVP=3DTRUE;PARTSTAT=3DNEEDS-ACTION;=0D=

 ROLE=3DREQ-PARTICIPANT;X-UID=3D1771038940:mailto:bjoern.ricks@demo.kol=
ab.org=0D
DTSTAMP:20110211T145948Z=0D
UID:libkcal-18913.122=0D
LAST-MODIFIED:20110211T145948Z=0D
SUMMARY:ein testtermin z15:59 =C3=BC=0D

See the '=0D' at the end of each line, even of those that are continued.
This is definately wrong and Outlook 2003 SP3 on Windows XP (both German)
does not recognise the resulting objects as an invitation.
(If I manually remove the '=0D's from each line Outlook recognises it.)
Comment 6 Tobias Koenig 2011-02-14 12:13:03 UTC
Git commit b901f2e103c8884c498e74b63888bb10cfcefedc by Tobias Koenig.
Committed on 14/02/2011 at 12:14.
Pushed by tokoe into branch 'komo3'.

Fix quoted-printable encoding of invitation mails

We have to call KMime::CRLFtoLF on every content passed to
KMime::Content::setContent() or KMime::Content::setBody(), otherwise
the internal algorithms of libkmime won't work correctly.

BUG: 264598

M  +3    -3    calendarsupport/mailclient.cpp     
M  +2    -2    plugins/messageviewer/bodypartformatter/text_calendar.cpp     

http://commits.kde.org/kdepim/b901f2e103c8884c498e74b63888bb10cfcefedc
Comment 7 Ludwig Reiter 2011-02-22 14:32:12 UTC
Kontact Touch Windows CE 20110218

Send an invitation with umlaut in attendee name to an OL 2003.
Outlook recognizes the invitation.

Verified.