Fix encoding for initial invitation mails

During the port from mimelib to kmime the explicit setting of
the charset and transfer-encoding has been lost.

BUG: 264598